NetBSD Problem Report #42873

From www@NetBSD.org  Tue Feb 23 08:55:42 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id C0AEE63C596
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 23 Feb 2010 08:55:42 +0000 (UTC)
Message-Id: <20100223085542.8120463C49F@www.NetBSD.org>
Date: Tue, 23 Feb 2010 08:55:42 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing parenthesis in external/bsd/openldap/dist/libraries/libldap/os-ip.c
X-Send-Pr-Version: www-1.0

>Number:         42873
>Category:       bin
>Synopsis:       Missing parenthesis in external/bsd/openldap/dist/libraries/libldap/os-ip.c
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 23 09:00:00 +0000 2010
>Closed-Date:    Tue Feb 23 16:35:57 +0000 2010
>Last-Modified:  Tue Feb 23 16:40:02 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Missing parenthesis in external/bsd/openldap/dist/libraries/libldap/os-ip.c found by cppcheck.

>How-To-Repeat:

>Fix:
diff -u -r1.1.1.2 os-ip.c
--- external/bsd/openldap/dist/libraries/libldap/os-ip.c	20 May 2008 00:05:30 -0000	1.1.1.2
+++ external/bsd/openldap/dist/libraries/libldap/os-ip.c	14 Feb 2010 07:56:24 -0000
@@ -699,7 +699,7 @@
 		char *herr;
 #ifdef NI_MAXHOST
 		char hbuf[NI_MAXHOST];
-#elif defined( MAXHOSTNAMELEN
+#elif defined( MAXHOSTNAMELEN )
 		char hbuf[MAXHOSTNAMELEN];
 #else
 		char hbuf[256];

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: jnemeth@NetBSD.org
State-Changed-When: Tue, 23 Feb 2010 16:35:57 +0000
State-Changed-Why:
Fixed, thanks for the PR!


From: John Nemeth <jnemeth@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42873 CVS commit: src/external/bsd/openldap/dist/libraries/libldap
Date: Tue, 23 Feb 2010 16:35:07 +0000

 Module Name:	src
 Committed By:	jnemeth
 Date:		Tue Feb 23 16:35:07 UTC 2010

 Modified Files:
 	src/external/bsd/openldap/dist/libraries/libldap: os-ip.c

 Log Message:
 PR/42873 - Henning Petersen -- missing )


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.2 -r1.2 \
     src/external/bsd/openldap/dist/libraries/libldap/os-ip.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.